--- a/static/problem.html
+++ b/static/problem.html
@@ -60,56 +60,60 @@
       }
 
       .container {
-        max-width: 1200px;
-        margin: 15px auto;
-        padding: 0 15px;
+        max-width: min(95vw, 1400px);
+        margin: 8px auto;
+        padding: 0 8px;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 15px;
+        grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
+        gap: clamp(8px, 2vw, 20px);
+        align-items: start;
       }
 
       .problem-section {
         background: white;
         border-radius: 8px;
-        padding: 15px;
+        padding: clamp(12px, 3vw, 20px);
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         height: fit-content;
+        min-height: fit-content;
       }
 
       .answer-section {
         background: white;
         border-radius: 8px;
-        padding: 15px;
+        padding: clamp(12px, 3vw, 20px);
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         display: flex;
         flex-direction: column;
         height: fit-content;
-        min-height: 500px;
+        min-height: 60vh;
       }
 
       .problem-header {
-        margin-bottom: 10px;
-        padding-bottom: 8px;
+        margin-bottom: clamp(8px, 2vw, 15px);
+        padding-bottom: clamp(6px, 1.5vw, 10px);
         border-bottom: 1px solid #e0e0e0;
       }
 
       .problem-id {
         color: #667eea;
-        font-size: 13px;
+        font-size: clamp(12px, 2.5vw, 14px);
         font-weight: bold;
         margin-bottom: 3px;
       }
 
       .problem-title {
-        font-size: 20px;
+        font-size: clamp(18px, 4vw, 22px);
         color: #333;
         margin-bottom: 5px;
+        line-height: 1.2;
       }
 
       .problem-info {
         display: flex;
         gap: 15px;
         align-items: center;
+        flex-wrap: wrap;
       }
 
       .max-score {
@@ -117,32 +121,36 @@
         color: #2e7d32;
         padding: 4px 10px;
         border-radius: 15px;
-        font-size: 12px;
+        font-size: clamp(11px, 2vw, 13px);
         font-weight: bold;
+        white-space: nowrap;
       }
 
       .problem-content {
         color: #333;
-        font-size: 16px;
-        line-height: 1.8;
+        font-size: clamp(14px, 3vw, 16px);
+        line-height: 1.6;
         white-space: pre-wrap;
       }
 
       .problem-description {
         font-family: "sans-serif";
         color: #333;
-        font-size: 25px;
-        line-height: 1.5;
+        font-size: clamp(16px, 4vw, 20px);
+        line-height: 1.4;
+        margin-bottom: clamp(10px, 2vw, 16px);
       }
 
       .problem-code {
         background: #ffffff;
         border: 1px solid #d1d5db;
         border-radius: 6px;
-        padding: 8px;
-        margin: 8px 0;
+        padding: clamp(6px, 1.5vw, 12px);
+        margin: clamp(6px, 1.5vw, 12px) 0;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
         position: relative;
+        max-width: 100%;
+        overflow: hidden;
       }
 
       .problem-code::before {
@@ -152,23 +160,25 @@
         left: 10px;
         background: #667eea;
         color: white;
-        padding: 1px 6px;
+        padding: 2px 8px;
         border-radius: 8px;
-        font-size: 10px;
+        font-size: clamp(9px, 2vw, 11px);
         font-weight: bold;
+        z-index: 1;
       }
 
       .problem-code pre {
         margin: 0;
         background: #f8fafc;
-        padding: 8px;
+        padding: clamp(6px, 1.5vw, 12px);
         border-radius: 4px;
         border: 1px solid #e2e8f0;
         overflow-x: auto;
         font-family: "Consolas", "Monaco", "Courier New", monospace;
-        font-size: 13px;
-        line-height: 1.3;
+        font-size: clamp(11px, 2.5vw, 14px);
+        line-height: 1.4;
         color: #1e293b;
+        max-width: 100%;
       }
 
       .problem-code code {
@@ -214,12 +224,13 @@
       .answer-textarea {
         flex: 1;
         width: 100%;
-        min-height: 300px;
-        padding: 15px;
+        min-height: clamp(250px, 40vh, 400px);
+        max-height: 70vh;
+        padding: clamp(10px, 2vw, 15px);
         border: 2px solid #ddd;
         border-radius: 8px;
-        font-size: 16px;
-        line-height: 1.6;
+        font-size: clamp(14px, 3vw, 16px);
+        line-height: 1.5;
         resize: vertical;
         font-family: inherit;
         outline: none;
@@ -311,22 +322,49 @@
       @media (max-width: 768px) {
         .container {
           grid-template-columns: 1fr;
-          gap: 10px;
-          margin: 10px auto;
+          gap: clamp(6px, 2vw, 12px);
+          margin: 6px auto;
+          padding: 0 6px;
+          max-width: 100vw;
         }
 
         .problem-section,
         .answer-section {
-          padding: 12px;
+          padding: clamp(10px, 3vw, 16px);
+          margin: 0;
         }
 
-        .problem-header {
-          margin-bottom: 8px;
-          padding-bottom: 6px;
+        .problem-description {
+          font-size: clamp(14px, 4vw, 18px);
         }
 
-        .problem-title {
-          font-size: 18px;
+        .answer-section {
+          min-height: 50vh;
+        }
+
+        .answer-textarea {
+          min-height: clamp(200px, 35vh, 300px);
+        }
+      }
+
+      @media (max-width: 480px) {
+        .container {
+          padding: 0 4px;
+          gap: 8px;
+        }
+
+        .problem-section,
+        .answer-section {
+          padding: 8px;
+        }
+
+        .header-content {
+          padding: 0 10px;
+        }
+
+        .nav-btn {
+          padding: 6px 12px;
+          font-size: 14px;
         }
       }
     </style>
