--- a/static/problem.html
+++ b/static/problem.html
@@ -60,58 +60,61 @@
       }
 
       .container {
-        max-width: min(95vw, 1400px);
-        margin: 8px auto;
-        padding: 0 8px;
+        max-width: 98vw;
+        margin: 4px auto;
+        padding: 0 6px;
         display: grid;
-        grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
-        gap: clamp(8px, 2vw, 20px);
+        grid-template-columns: 1fr 1fr;
+        gap: 8px;
         align-items: start;
+        height: calc(100vh - 80px);
       }
 
       .problem-section {
         background: white;
-        border-radius: 8px;
-        padding: clamp(12px, 3vw, 20px);
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        height: fit-content;
-        min-height: fit-content;
+        border-radius: 6px;
+        padding: 12px;
+        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.08);
+        height: 100%;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
       }
 
       .answer-section {
         background: white;
-        border-radius: 8px;
-        padding: clamp(12px, 3vw, 20px);
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 6px;
+        padding: 12px;
+        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.08);
         display: flex;
         flex-direction: column;
-        height: fit-content;
-        min-height: 60vh;
+        height: 100%;
       }
 
       .problem-header {
-        margin-bottom: clamp(8px, 2vw, 15px);
-        padding-bottom: clamp(6px, 1.5vw, 10px);
+        margin-bottom: 8px;
+        padding-bottom: 6px;
         border-bottom: 1px solid #e0e0e0;
+        flex-shrink: 0;
       }
 
       .problem-id {
         color: #667eea;
-        font-size: clamp(12px, 2.5vw, 14px);
+        font-size: 13px;
         font-weight: bold;
-        margin-bottom: 3px;
+        margin-bottom: 2px;
       }
 
       .problem-title {
-        font-size: clamp(18px, 4vw, 22px);
+        font-size: 18px;
         color: #333;
-        margin-bottom: 5px;
+        margin-bottom: 4px;
         line-height: 1.2;
       }
 
       .problem-info {
         display: flex;
-        gap: 15px;
+        gap: 10px;
         align-items: center;
         flex-wrap: wrap;
       }
@@ -119,35 +122,37 @@
       .max-score {
         background: #e8f5e9;
         color: #2e7d32;
-        padding: 4px 10px;
-        border-radius: 15px;
-        font-size: clamp(11px, 2vw, 13px);
+        padding: 3px 8px;
+        border-radius: 12px;
+        font-size: 11px;
         font-weight: bold;
         white-space: nowrap;
       }
 
       .problem-content {
         color: #333;
-        font-size: clamp(14px, 3vw, 16px);
-        line-height: 1.6;
+        font-size: 14px;
+        line-height: 1.5;
         white-space: pre-wrap;
+        flex: 1;
+        overflow-y: auto;
       }
 
       .problem-description {
         font-family: "sans-serif";
         color: #333;
-        font-size: clamp(16px, 4vw, 20px);
-        line-height: 1.4;
-        margin-bottom: clamp(10px, 2vw, 16px);
+        font-size: 15px;
+        line-height: 1.3;
+        margin-bottom: 8px;
       }
 
       .problem-code {
         background: #ffffff;
         border: 1px solid #d1d5db;
-        border-radius: 6px;
-        padding: clamp(6px, 1.5vw, 12px);
-        margin: clamp(6px, 1.5vw, 12px) 0;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+        border-radius: 4px;
+        padding: 6px;
+        margin: 6px 0;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
         position: relative;
         max-width: 100%;
         overflow: hidden;
