--- a/static/problem.html
+++ b/static/problem.html
@@ -23,28 +23,35 @@
         color: white;
         padding: clamp(15px, 3vw, 20px) 0;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        width: 100%;
+        width: 100vw;
+        position: relative;
       }
 
       .header-content {
-        max-width: 98vw;
-        margin: 0 auto;
-        padding: 0 clamp(8px, 2vw, 20px);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         width: 100%;
+        margin: 0;
+        padding: 0 clamp(20px, 4vw, 40px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
       }
 
       .header h1 {
         font-size: clamp(18px, 4vw, 24px);
-        flex-shrink: 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 0;
       }
 
       .nav-buttons {
         display: flex;
         gap: clamp(6px, 1.5vw, 10px);
-        flex-shrink: 0;
+        position: absolute;
+        right: clamp(20px, 4vw, 40px);
+        top: 50%;
+        transform: translateY(-50%);
       }
 
       .nav-btn {
