--- a/static/Tutorial1.html
+++ b/static/Tutorial1.html
@@ -502,6 +502,8 @@
     </div>
 
     <script>
+        console.log("📚 Tutorial1 페이지 로드됨");
+
         let currentStep = 0;
         const maxSteps = 4;
 
@@ -639,6 +641,7 @@
                 updateUI();
             } else if (currentStep === maxSteps) {
                 // 마지막 단계에서 다음 튜토리얼로 이동
+                console.log("📖 Tutorial2로 이동");
                 window.location.href = '/tutorial2';
             }
         }
@@ -760,12 +763,17 @@
 
         // 이벤트 리스너 등록
         document.addEventListener('DOMContentLoaded', function() {
-            // 로그인 상태 확인
+            console.log("📚 Tutorial1 초기화 시작");
+            
+            // 로그인 상태 확인 - 토큰이 없으면 로그인 페이지로
             const token = localStorage.getItem("access_token");
             if (!token) {
+                console.log("❌ 토큰 없음, 로그인 페이지로 이동");
                 window.location.href = "/";
                 return;
             }
+
+            console.log("✅ 토큰 확인됨, 튜토리얼 진행");
 
             // 버튼 이벤트 리스너
             document.getElementById('next-btn').addEventListener('click', nextStep);
@@ -782,6 +790,7 @@
 
             // 초기화
             updateUI();
+            console.log("📚 Tutorial1 초기화 완료");
         });
     </script>
 </body>
