--- a/static/login.html
+++ b/static/login.html
@@ -217,7 +217,7 @@
               console.log("🎯 튜토리얼로 이동 중...");
               
               // 무조건 튜토리얼로 이동 (히스토리 없이)
-              window.location.replace("/tutorial1");
+              window.location.replace("/tutorial1"); // 이 부분이 핵심입니다!
               
             } else {
               console.log("❌ 로그인 실패:", data.detail);
