--- a/static/Tutorial1.html
+++ b/static/Tutorial1.html
@@ -727,8 +727,8 @@
                 currentStep++;
                 updateUI();
             } else {
-                alert('다음 튜토리얼로 이동합니다!');
-                // window.location.href = '/tutorial1_5';
+                // 다음 튜토리얼로 실제 이동
+                window.location.href = 'tutorial1_5.html';
             }
         }
 
