--- a/static/Tutorial1_5.html
+++ b/static/Tutorial1_5.html
@@ -697,8 +697,8 @@
                 currentStep++;
                 updateUI();
             } else {
-                alert('다음 튜토리얼로 이동합니다!');
-                // window.location.href = '/tutorial2';
+                // 다음 튜토리얼로 실제 이동
+                window.location.href = 'tutorial2.html';
             }
         }
 
