--- a/static/Tutorial2.html
+++ b/static/Tutorial2.html
@@ -129,18 +129,27 @@
             border: 2px solid #667eea;
         }
         .criteria-list {
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 15px;
         }
         .criteria-item {
             background: white;
-            padding: 15px 20px;
+            padding: 20px;
             border-radius: 10px;
             border-left: 5px solid #667eea;
         }
-        .criteria-item-title { font-weight: bold; color: #667eea; margin-bottom: 5px; }
-        .criteria-item-desc { color: #666; font-size: 14px; }
+        .criteria-item-title { 
+            font-weight: bold; 
+            color: #667eea; 
+            margin-bottom: 8px;
+            font-size: 16px;
+        }
+        .criteria-item-desc { 
+            color: #666; 
+            font-size: 14px;
+            line-height: 1.4;
+        }
 
         .btn {
             padding: 12px 24px;
@@ -155,6 +164,12 @@
         .btn-primary { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; }
         .btn-secondary { background: #6c757d; color: white; }
         .action-buttons { display: flex; justify-content: center; gap: 20px; margin-top: 30px; }
+
+        @media (max-width: 768px) {
+            .criteria-list {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
@@ -204,13 +219,6 @@
                             <strong>🤔 아쉬운 점:</strong> 두 변수가 바뀌는 것인지, 두 변수의 값이 바뀌는 것인지 애매합니다. 중의적인 표현을 지양하는 것이 바람직합니다.
                         </p>
                     </div>
-                    
-                    <div class="friend-answer bad">
-                        <p class="friend-answer-text">"1을 2로 바꾸고, 2를 1로 바꾸는 과정입니다."</p>
-                        <p class="friend-answer-analysis bad">
-                            <strong>🤔 아쉬운 점:</strong> a=1, b=2인 경우뿐만 아니라 일반적으로 확장될 수 있는 서술이 더 좋습니다.
-                        </p>
-                    </div>
                 </div>
             </div>
 
@@ -232,10 +240,6 @@
                         <div class="criteria-item-title">3️⃣ 명확성</div>
                         <div class="criteria-item-desc">누가 읽어도 오해 없이 이해할 수 있도록 구체적으로 설명했는가?</div>
                     </div>
-                    <div class="criteria-item">
-                        <div class="criteria-item-title">4️⃣ 일반성</div>
-                        <div class="criteria-item-desc">특정 숫자나 변수명에 의존하지 않고 일반적인 상황에 적용 가능한가?</div>
-                    </div>
                 </div>
             </div>
 
@@ -253,18 +257,14 @@
         }
 
         function goBack() {
-            window.location.href = '/tutorial1_5';
+            window.location.href = 'tutorial1_5.html';
         }
 
         function goNext() {
-            window.location.href = '/problems';
+            window.location.href = 'problems.html';
         }
 
         document.addEventListener('DOMContentLoaded', function() {
-            if (!localStorage.getItem("access_token")) {
-                window.location.href = "/";
-                return;
-            }
             document.querySelectorAll('.answer-option').forEach((option, index) => {
                 option.addEventListener('click', () => selectOption(index + 1));
             });
