--- a/static/Tutorial1.html
+++ b/static/Tutorial1.html
@@ -497,6 +497,7 @@
                         <span class="code-line" id="line-3">a = b</span>
                         <span class="code-line" id="line-4">b = tmp</span>
                     </div>
+                    <span class="code-line" id="line-1">print(a, b)</span>
                 </div>
                 <div class="step-description" id="step-description" style="display: none;">
                 </div>
